--- a/index.html
+++ b/index.html
@@ -92,20 +92,8 @@
                 <div class="row no-gutters">
                   <div class="col-12">
                     <div class="row no-gutters">
+
                       <div class="col-12 col-lg-6">
-
-                        <!-- Heading -->
-                        <h6 class="dropdown-header">
-                          <img class="icon" width="24" alt="Dwarf Forms logo" src="assets/img/logos/dwarf forms logo blue.svg"> Dwarf Forms
-                        </h6>
-
-                        <!-- List -->
-                        <a class="dropdown-item" href="dwarf-forms.html">
-                          Dwarf Forms
-                        </a>
-                        <a class="dropdown-item mb-5" href="#!">
-                          API Documentation
-                        </a>
 
                         <!-- Heading -->
                         <h6 class="dropdown-header">
@@ -129,6 +117,7 @@
                         </a>
 
                       </div>
+
                       <div class="col-12 col-lg-6">
 
                         <!-- Heading -->
@@ -138,25 +127,29 @@
 
                         <!-- List -->
                         <a class="dropdown-item" href="#!">
-                          LinkedIn Person Profile API
+                          Person API
                         </a>
                         <a class="dropdown-item" href="#!">
-                          LinkedIn Company Profile API
+                          Company API
                         </a>
                         <a class="dropdown-item" href="#!">
-                          Work Email Lookup API
+                          Jobs API
                         </a>
                         <a class="dropdown-item" href="#!">
-                          Employee Listing API
+                          School API
                         </a>
                         <a class="dropdown-item" href="#!">
-                          Reverse Email Lookup API
+                          Search API
+                        </a>
+                        <a class="dropdown-item" href="#!">
+                          Contact API
                         </a>
                         <a class="dropdown-item mb-5" href="#!">
-                          API Documentation
+                          API Documentation <i class="fe fe-arrow-right"></i>
                         </a>
 
                       </div>
+
                     </div>
                   </div>
                 </div>
@@ -170,13 +163,64 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarAccount">
                 <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="dwarf-forms-pricing.html">
-                    Dwarf Forms Pricing Plan
+                  <a class="dropdown-link" href="pricing.html">
+                    Proxycurl API Pricing
                   </a>
                 </li>
                 <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="pricing.html">
-                    Proxycurl API Pricing Plans
+                  <a class="dropdown-link" href="#!">
+                    LinkDB Pricing
+                  </a>
+                </li>
+              </ul>
+            </li>
+
+            <!-- Solution -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" id="navbarAccount" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+                Solutions <i class="fe fe-chevron-down"></i>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarAccount">
+
+              <!-- Heading -->
+              <h6 class="dropdown-header">
+                <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M0 0h24v24H0z"></path><path d="M12.374 19.939l5.849-8.773A.75.75 0 0017.599 10H13V4.477a.75.75 0 00-1.374-.416l-5.849 8.773A.75.75 0 006.401 14H11v5.523a.75.75 0 001.374.416z" fill="#335EEA"></path></g></svg>
+                Solutions
+              </h6>
+
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    Accelerating growth-stage startups
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    Sales and Marketing automation
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    Investment signals
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    Talent identification
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    LinkedIn Scraper API
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    Clearbit alternative
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    PeopleDataLabs alternative
                   </a>
                 </li>
               </ul>
@@ -1418,9 +1462,9 @@
     <!-- FOOTER
     ================================================== -->
     <footer class="py-8 py-md-11 bg-white">
-      <div class="container">
+      <div class="container-fluid" style="max-width: 1080px;">
         <div class="row">
-          <div class="col-12 col-md-4 col-lg-3">
+          <div class="col-12 col-md-3 col-lg-3">
         
             <!-- Brand -->
             <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" alt="proxycurl logo" class="footer-brand img-fluid mb-2">
@@ -1446,13 +1490,33 @@
                 </a>
               </li>
               <li class="mb-3">
+                <a href="linkdb.html" class="text-reset">
+                  LinkDB Datasets
+                </a>
+              </li>
+              <li class="mb-3">
                 <a href="pricing.html" class="text-reset">
                   Pricing
                 </a>
               </li>
               <li class="mb-3">
+                <a href="#!" class="text-reset">
+                  Company Employee Listing Directory
+                </a>
+              </li>
+              <li class="mb-3">
                 <a href="terms-of-use.html" class="text-reset">
-                  Terms of use
+                  Terms of Use
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="#!" class="text-reset">
+                  Privacy Policy
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="#!" class="text-reset">
+                  Affiliate Programme
                 </a>
               </li>
             </ul>
@@ -1469,47 +1533,47 @@
             <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
               <li class="mb-3">
                 <a href="#!" class="text-reset">
-                  Documentation
+                  Person API
                 </a>
               </li>
               <li class="mb-3">
-                <a href="people-linkedin-profile.html" class="text-reset">
-                  Person Profile Endpoint
+                <a href="#!" class="text-reset">
+                  Company API
                 </a>
               </li>
               <li class="mb-3">
-                <a href="company-linkedin-profile.html" class="text-reset">
-                  Company Profile Endpoint
+                <a href="#!" class="text-reset">
+                  Search API
                 </a>
               </li>
               <li class="mb-3">
-                <a href="jobs-linkedin-profile.html" class="text-reset">
-                  Job Profile Endpoint
+                <a href="#!" class="text-reset">
+                  Jobs API
                 </a>
               </li>
               <li class="mb-3">
-                <a href="linkdb.html" class="text-reset">
-                  LinkDB
+                <a href="#!" class="text-reset">
+                  Contact API
                 </a>
               </li>
               <li class="mb-3">
-                <a href="linkdb-snapshots.html" class="text-reset">
-                  LinkDB Snapshots
+                <a href="#!" class="text-reset">
+                  School API
                 </a>
               </li> 
               <li class="mb-3">
-                <a href="email-lookup-api-endpoint.html" class="text-reset">
-                  Email Lookup API Endpoint
+                <a href="#!" class="text-reset">
+                  Free API
                 </a>
               </li>
               <li class="mb-3">
-                <a href="list-employee-endpoint.html" class="text-reset">
-                  List Employee Endpoint
+                <a href="#!" class="text-reset" target="_blank">
+                  Documentation <i class="fe fe-arrow-right"></i>
                 </a>
               </li>
               <li class="mb-3">
-                <a href="reverse-email-lookup.html" class="text-reset">
-                  Reverse Email Lookup
+                <a href="https://twitter.com/proxycurl" class="text-reset" target="_blank">
+                  API Status <span class="badge rounded-pill badge-primary-soft"><i class="neu-br-twitter"></i>@Proxycurl</span>
                 </a>
               </li>
             </ul>
@@ -1549,6 +1613,11 @@
               <li class="mb-3">
                 <a href="mailto:hello@proxycurl.com" class="text-reset">
                   Email us
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="#!" class="text-reset">
+                  FAQ
                 </a>
               </li>
             </ul>
