--- a/company-profile-page.html
+++ b/company-profile-page.html
@@ -81,6 +81,32 @@ response = requests.get(api_endpoint,
 
     </div>
 
+     <!-- ANNOUNCEMENT
+    ================================================== -->
+    <section class="bg-dark">
+
+      <div class="container">
+
+        <div class="row justify-content-center align-items-center pt-4">
+
+          <div class="col-12 text-center">
+
+            <!-- Text -->
+            <p class="font-size-md text-white">
+              Enrich companies with funding, categories, emails, exits/acquisitions data 
+              <a class="text-warning font-weight-bold ml-2" href="https://nubela.co/blog/enrich-companies-with-funding-categories-emails-exits-acquisitions-data" target="_blank">
+                Learn more <i class="neu-arrow"></i> 
+              </a>
+            </p>
+            
+          </div>
+
+        </div> <!-- / .row -->
+
+      </div>
+
+    </section>
+
      <!-- NAVBAR
     ================================================== -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
@@ -115,9 +141,9 @@ response = requests.get(api_endpoint,
               <div class="dropdown-menu dropdown-menu-lg" aria-labelledby="navbarPages">
                 <div class="row no-gutters">
                   <div class="col-12">
-                    <div class="row g-0">
+                    <div class="row no-gutters">
 
-                      <div class="col-12 col-lg-6 pl-4">
+                      <div class="col-12 col-lg-6">
 
                         <!-- Heading -->
                         <h6 class="dropdown-header">
@@ -126,7 +152,7 @@ response = requests.get(api_endpoint,
 
                         <!-- List -->
                         <a class="dropdown-item mb-5" href="linkdb.html">
-                          Database of public<br>
+                          Database of public <br>
                           LinkedIn profiles
                         </a>
 
@@ -151,31 +177,25 @@ response = requests.get(api_endpoint,
 
                         <!-- List -->
                         <a class="dropdown-item" href="#!">
-                          LinkedIn Person Profile API
+                          Person API
                         </a>
                         <a class="dropdown-item" href="#!">
-                          LinkedIn Company Profile API
+                          Company API
                         </a>
                         <a class="dropdown-item" href="#!">
-                          Work Email Lookup API
+                          Jobs API
                         </a>
                         <a class="dropdown-item" href="#!">
-                          Employee Listing API
+                          School API
                         </a>
                         <a class="dropdown-item" href="#!">
-                          Reverse Email Lookup API
+                          Search API
                         </a>
-                        <a class="dropdown-item" href="employee-search-api.html">
-                          Employee Search API Endpoint
-                        </a>
-                        <a class="dropdown-item" href="contact-api.html">
-                          Contact API Endpoint
-                        </a>
-                        <a class="dropdown-item" href="jobs-api.html">
-                          Jobs API Endpoint
+                        <a class="dropdown-item" href="#!">
+                          Contact API
                         </a>
                         <a class="dropdown-item mb-5" href="#!">
-                          API Documentation
+                          API Documentation <i class="fe fe-arrow-right"></i>
                         </a>
 
                       </div>
@@ -193,13 +213,13 @@ response = requests.get(api_endpoint,
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarAccount">
                 <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="dwarf-forms-pricing.html">
-                    Dwarf Forms Pricing Plan
+                  <a class="dropdown-link" href="pricing.html">
+                    Proxycurl API Pricing
                   </a>
                 </li>
                 <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="pricing.html">
-                    Proxycurl API Pricing Plans
+                  <a class="dropdown-link" href="#!">
+                    LinkDB Pricing
                   </a>
                 </li>
               </ul>
@@ -212,10 +232,11 @@ response = requests.get(api_endpoint,
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarAccount">
 
-                <!-- Heading -->
-                <h6 class="dropdown-header">
-                  <img class="icon" width="24" alt="Dwarf Forms logo" src="assets/img/logos/solutions.svg"> Solutions
-                </h6>   
+              <!-- Heading -->
+              <h6 class="dropdown-header">
+                <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M0 0h24v24H0z"></path><path d="M12.374 19.939l5.849-8.773A.75.75 0 0017.599 10H13V4.477a.75.75 0 00-1.374-.416l-5.849 8.773A.75.75 0 006.401 14H11v5.523a.75.75 0 001.374.416z" fill="#335EEA"></path></g></svg>
+                Solutions
+              </h6>
 
                 <li class="dropdown-item dropright">
                   <a class="dropdown-link" href="#!">
@@ -239,7 +260,17 @@ response = requests.get(api_endpoint,
                 </li>
                 <li class="dropdown-item dropright">
                   <a class="dropdown-link" href="#!">
+                    LinkedIn Scraper API
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
                     Clearbit alternative
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    PeopleDataLabs alternative
                   </a>
                 </li>
               </ul>
