--- a/list-employee-endpoint.html
+++ b/list-employee-endpoint.html
@@ -89,9 +89,9 @@
               <div class="dropdown-menu dropdown-menu-lg" aria-labelledby="navbarPages">
                 <div class="row no-gutters">
                   <div class="col-12">
-                    <div class="row g-0">
+                    <div class="row no-gutters">
 
-                      <div class="col-12 col-lg-6 pl-4">
+                      <div class="col-12 col-lg-6">
 
                         <!-- Heading -->
                         <h6 class="dropdown-header">
@@ -100,7 +100,7 @@
 
                         <!-- List -->
                         <a class="dropdown-item mb-5" href="linkdb.html">
-                          Database of public<br>
+                          Database of public <br>
                           LinkedIn profiles
                         </a>
 
@@ -125,31 +125,25 @@
 
                         <!-- List -->
                         <a class="dropdown-item" href="#!">
-                          LinkedIn Person Profile API
+                          Person API
                         </a>
                         <a class="dropdown-item" href="#!">
-                          LinkedIn Company Profile API
+                          Company API
                         </a>
                         <a class="dropdown-item" href="#!">
-                          Work Email Lookup API
+                          Jobs API
                         </a>
                         <a class="dropdown-item" href="#!">
-                          Employee Listing API
+                          School API
                         </a>
                         <a class="dropdown-item" href="#!">
-                          Reverse Email Lookup API
+                          Search API
                         </a>
-                        <a class="dropdown-item" href="employee-search-api.html">
-                          Employee Search API Endpoint
-                        </a>
-                        <a class="dropdown-item" href="contact-api.html">
-                          Contact API Endpoint
-                        </a>
-                        <a class="dropdown-item" href="jobs-api.html">
-                          Jobs API Endpoint
+                        <a class="dropdown-item" href="#!">
+                          Contact API
                         </a>
                         <a class="dropdown-item mb-5" href="#!">
-                          API Documentation
+                          API Documentation <i class="fe fe-arrow-right"></i>
                         </a>
 
                       </div>
@@ -167,13 +161,13 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarAccount">
                 <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="dwarf-forms-pricing.html">
-                    Dwarf Forms Pricing Plan
+                  <a class="dropdown-link" href="pricing.html">
+                    Proxycurl API Pricing
                   </a>
                 </li>
                 <li class="dropdown-item dropright">
-                  <a class="dropdown-link" href="pricing.html">
-                    Proxycurl API Pricing Plans
+                  <a class="dropdown-link" href="#!">
+                    LinkDB Pricing
                   </a>
                 </li>
               </ul>
@@ -186,10 +180,11 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarAccount">
 
-                <!-- Heading -->
-                <h6 class="dropdown-header">
-                  <img class="icon" width="24" alt="Dwarf Forms logo" src="assets/img/logos/solutions.svg"> Solutions
-                </h6>   
+              <!-- Heading -->
+              <h6 class="dropdown-header">
+                <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M0 0h24v24H0z"></path><path d="M12.374 19.939l5.849-8.773A.75.75 0 0017.599 10H13V4.477a.75.75 0 00-1.374-.416l-5.849 8.773A.75.75 0 006.401 14H11v5.523a.75.75 0 001.374.416z" fill="#335EEA"></path></g></svg>
+                Solutions
+              </h6>
 
                 <li class="dropdown-item dropright">
                   <a class="dropdown-link" href="#!">
@@ -213,7 +208,17 @@
                 </li>
                 <li class="dropdown-item dropright">
                   <a class="dropdown-link" href="#!">
+                    LinkedIn Scraper API
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
                     Clearbit alternative
+                  </a>
+                </li>
+                <li class="dropdown-item dropright">
+                  <a class="dropdown-link" href="#!">
+                    PeopleDataLabs alternative
                   </a>
                 </li>
               </ul>
