--- a/linkedin.html
+++ b/linkedin.html
@@ -1596,9 +1596,9 @@ response = requests.get(api_endpoint,
     <!-- FOOTER
     ================================================== -->
     <footer class="py-8 py-md-11 bg-white">
-      <div class="container">
+      <div class="container-fluid" style="max-width: 1080px;">
         <div class="row">
-          <div class="col-12 col-md-4 col-lg-3">
+          <div class="col-12 col-md-3 col-lg-3">
         
             <!-- Brand -->
             <img src="./assets/img/Proxycurl-Logotype-Primary@1x.png" alt="proxycurl logo" class="footer-brand img-fluid mb-2">
@@ -1624,13 +1624,33 @@ response = requests.get(api_endpoint,
                 </a>
               </li>
               <li class="mb-3">
+                <a href="linkdb.html" class="text-reset">
+                  LinkDB Datasets
+                </a>
+              </li>
+              <li class="mb-3">
                 <a href="pricing.html" class="text-reset">
                   Pricing
                 </a>
               </li>
               <li class="mb-3">
+                <a href="#!" class="text-reset">
+                  Company Employee Listing Directory
+                </a>
+              </li>
+              <li class="mb-3">
                 <a href="terms-of-use.html" class="text-reset">
-                  Terms of use
+                  Terms of Use
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="#!" class="text-reset">
+                  Privacy Policy
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="#!" class="text-reset">
+                  Affiliate Programme
                 </a>
               </li>
             </ul>
@@ -1647,62 +1667,47 @@ response = requests.get(api_endpoint,
             <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
               <li class="mb-3">
                 <a href="#!" class="text-reset">
-                  Documentation
+                  Person API
                 </a>
               </li>
               <li class="mb-3">
-                <a href="people-linkedin-profile.html" class="text-reset">
-                  Person Profile Endpoint
+                <a href="#!" class="text-reset">
+                  Company API
                 </a>
               </li>
               <li class="mb-3">
-                <a href="company-linkedin-profile.html" class="text-reset">
-                  Company Profile Endpoint
+                <a href="#!" class="text-reset">
+                  Search API
                 </a>
               </li>
               <li class="mb-3">
-                <a href="jobs-linkedin-profile.html" class="text-reset">
-                  Job Profile Endpoint
+                <a href="#!" class="text-reset">
+                  Jobs API
                 </a>
               </li>
               <li class="mb-3">
-                <a href="linkdb.html" class="text-reset">
-                  LinkDB
+                <a href="#!" class="text-reset">
+                  Contact API
                 </a>
               </li>
               <li class="mb-3">
-                <a href="linkdb-snapshots.html" class="text-reset">
-                  LinkDB Snapshots
+                <a href="#!" class="text-reset">
+                  School API
                 </a>
               </li> 
               <li class="mb-3">
-                <a href="email-lookup-api-endpoint.html" class="text-reset">
-                  Email Lookup API Endpoint
+                <a href="#!" class="text-reset">
+                  Free API
                 </a>
               </li>
               <li class="mb-3">
-                <a href="list-employee-endpoint.html" class="text-reset">
-                  List Employee Endpoint
+                <a href="#!" class="text-reset" target="_blank">
+                  Documentation <i class="fe fe-arrow-right"></i>
                 </a>
               </li>
               <li class="mb-3">
-                <a href="reverse-email-lookup.html" class="text-reset">
-                  Reverse Email Lookup
-                </a>
-              </li>
-              <li class="mb-3">
-                <a href="employee-search-api.html" class="text-reset">
-                  Employee Search API Endpoint
-                </a>
-              </li>
-              <li class="mb-3">
-                <a href="contact-api.html" class="text-reset">
-                  Contact API Endpoint
-                </a>
-              </li>
-              <li class="mb-3">
-                <a href="jobs-api.html" class="text-reset">
-                  Jobs API Endpoint
+                <a href="https://twitter.com/proxycurl" class="text-reset" target="_blank">
+                  API Status <span class="badge rounded-pill badge-primary-soft"><i class="neu-br-twitter"></i>@Proxycurl</span>
                 </a>
               </li>
             </ul>
@@ -1720,11 +1725,6 @@ response = requests.get(api_endpoint,
               <li class="mb-3">
                 <a href="https://nubela.co" class="text-reset">
                   Nubela Pte Ltd
-                </a>
-              </li>
-              <li class="mb-3">
-                <a href="team.html" class="text-reset">
-                  Our Team
                 </a>
               </li>
               <li class="mb-3">
@@ -1747,6 +1747,11 @@ response = requests.get(api_endpoint,
               <li class="mb-3">
                 <a href="mailto:hello@proxycurl.com" class="text-reset">
                   Email us
+                </a>
+              </li>
+              <li class="mb-3">
+                <a href="#!" class="text-reset">
+                  FAQ
                 </a>
               </li>
             </ul>
