--- a/solution-PeopleDataLabs.html
+++ b/solution-PeopleDataLabs.html
@@ -301,7 +301,7 @@
             <div class="img-skewed img-skewed-left" data-aos="fade-left">
 
               <!-- Image -->
-              <img src="Illustration_landscape_placement.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0 aos-init aos-animate" alt="...">
+              <img src="assets/img/illustrations/PDL alternative_First fold.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0 aos-init aos-animate" alt="...">
 
             </div>
 
@@ -691,7 +691,7 @@
               Proxycurl's data are no older 29 days. With the right API parameters, Proxycurl offers a data freshness guarantee of 29 days. In fact, some data are fetched in real-time.
             </p>
 
-            <img class="img img-fluid rounded" alt="wle" src="Illustration_landscape_placement.png">
+            <img class="img img-fluid rounded" alt="wle" src="assets/img/illustrations/PDL alternative_Third fold.png">
 
             <a class="btn btn-primary lift mt-md-6 mt-4" href="https://nubela.co/blog/how-fresh-are-profiles-returned-by-proxycurl-api/" target="_blank">
               See Data Freshness Guarantee
