--- a/company-profile-page.html
+++ b/company-profile-page.html
@@ -1178,7 +1178,7 @@ response = requests.get(api_endpoint,
               </li>
               <li class="mb-3">
                 <a href="#!" class="text-reset">
-                  Affiliate Programme
+                  Affiliate Program
                 </a>
               </li>
             </ul>
