--- a/jobs-linkedin-profile.html
+++ b/jobs-linkedin-profile.html
@@ -1284,7 +1284,7 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
               </li>
               <li class="mb-3">
                 <a href="#!" class="text-reset">
-                  Affiliate Programme
+                  Affiliate Program
                 </a>
               </li>
             </ul>
