--- a/linkdb.html
+++ b/linkdb.html
@@ -1066,7 +1066,7 @@ AND parsed_data @> '{"experiences": [{"ends_at": null, "company": "Electronic Ar
               </li>
               <li class="mb-3">
                 <a href="#!" class="text-reset">
-                  Affiliate Programme
+                  Affiliate Program
                 </a>
               </li>
             </ul>
