--- a/solution-PeopleDataLabs.html
+++ b/solution-PeopleDataLabs.html
@@ -1369,7 +1369,7 @@ country=MX</code></pre>
               </li>
               <li class="mb-3">
                 <a href="#!" class="text-reset">
-                  Affiliate Programme
+                  Affiliate Program
                 </a>
               </li>
             </ul>
