--- a/email-lookup-api-endpoint.html
+++ b/email-lookup-api-endpoint.html
@@ -1008,7 +1008,7 @@
               </li>
               <li class="mb-3">
                 <a href="#!" class="text-reset">
-                  Affiliate Programme
+                  Affiliate Program
                 </a>
               </li>
             </ul>
