--- a/linkedin.html
+++ b/linkedin.html
@@ -1575,7 +1575,7 @@ curl \
               </li>
               <li class="mb-3">
                 <a href="#!" class="text-reset">
-                  Affiliate Programme
+                  Affiliate Program
                 </a>
               </li>
             </ul>
