--- a/people-profile-page.html
+++ b/people-profile-page.html
@@ -733,7 +733,7 @@ response = requests.get(api_endpoint,
               </li>
               <li class="mb-3">
                 <a href="#!" class="text-reset">
-                  Affiliate Programme
+                  Affiliate Program
                 </a>
               </li>
             </ul>
