--- a/proxycurl-affiliate.html
+++ b/proxycurl-affiliate.html
@@ -501,7 +501,7 @@
               </li>
               <li class="mb-3">
                 <a href="#!" class="text-reset">
-                  Affiliate Programme
+                  Affiliate Program
                 </a>
               </li>
             </ul>
