--- a/reverse-email-lookup.html
+++ b/reverse-email-lookup.html
@@ -1135,7 +1135,7 @@ response <span class="text-hl">=</span> requests.<span class="text-python-hl">ge
               </li>
               <li class="mb-3">
                 <a href="#!" class="text-reset">
-                  Affiliate Programme
+                  Affiliate Program
                 </a>
               </li>
             </ul>
