--- a/solution-growth.html
+++ b/solution-growth.html
@@ -966,7 +966,7 @@
               </li>
               <li class="mb-3">
                 <a href="#!" class="text-reset">
-                  Affiliate Programme
+                  Affiliate Program
                 </a>
               </li>
             </ul>
