--- a/search-api.html
+++ b/search-api.html
@@ -363,7 +363,7 @@
               Search for people in LinkDB using 46 data attributes with regular expressions
             </p>
 
-            <img class="img img-fluid rounded mb-4" alt="ooo" src="Illustration_landscape_placement.png">
+            <img class="img img-fluid rounded mb-4" alt="Database illustration" src="assets/img/illustrations/Database of people.png">
 
             <div class="text-center mt-6">
               <button class="btn btn-primary lift mr-md-4 mr-2">
@@ -399,7 +399,7 @@
               Search for people in LinkDB using 46 data attributes with regular expressions
             </p>
 
-            <img class="img img-fluid rounded mb-8" alt="ooo" src="Illustration_landscape_placement.png">
+            <img class="img img-fluid rounded mb-8" alt="ooo" src="assets/img/illustrations/Database of company.png">
 
             <div class="text-center mt-6">
               <button class="btn btn-primary lift mr-md-4 mr-2">
