--- a/search-api.html
+++ b/search-api.html
@@ -514,18 +514,27 @@
                 <div class="carousel-item active">
                   <a href="#!" target="_blank">
                     <img class="d-block w-100" src="assets/img/illustrations/TLC_Proxycurl Announces Search!_cover.png" alt="First slide">
+                    <p class="h2 text-center mt-2 font-weight-bold">
+                      Proxycurl Announces Search!
+                    </p>
                   </a>
                 </div>
 
                 <div class="carousel-item">
                   <a href="#!" target="_blank">
                     <img class="d-block w-100" src="assets/img/illustrations/TLC_Proxycurl Search May 2023.png" alt="Second slide">
+                    <p class="h2 text-center mt-2 font-weight-bold">
+                      Proxycurl Search May 2023 - Results Now 67% Cheaper & More
+                    </p>
                   </a>
                 </div>
 
                 <div class="carousel-item">
                   <a href="#!" target="_blank">
                     <img class="d-block w-100" src="assets/img/illustrations/TLC_ex-Googlers_cover.png" alt="Third slide">
+                    <p class="h2 text-center mt-2 font-weight-bold">
+                      1 in 3 Ex-Google Employees In $15 Billion Worth Of Startups [2023 Layoffs]
+                    </p>
                   </a>
                 </div>
 
