--- a/school-api.html
+++ b/school-api.html
@@ -283,7 +283,7 @@
 
           <div class="col-12 col-md-12 text-center">
 
-            <img class="img img-fluid rounded mb-6" alt="illustration" src="Illustration_landscape_placement.png">
+            <img class="img img-fluid rounded mb-6" alt="illustration" src="assets/img/illustrations/School API illustration.png">
 
             <div>
 
