--- a/solution-PeopleDataLabs.html
+++ b/solution-PeopleDataLabs.html
@@ -310,7 +310,8 @@
 
             <!-- Heading -->
             <h1 class="font-weight-bold display-3">
-              PeopleDataLabs is great! (<span class="text-danger">if you like paying a lot a premium for stale data</span>)
+              PeopleDataLabs is great! (if you like <span class="text-danger"><br>
+                paying a premium for stale data</span>)
             </h1>
 
             <p class="text-gray-700 lead">
@@ -354,7 +355,7 @@
 
             <!-- Text -->
             <p class="lead text-muted mb-6 mb-lg-8">
-              Everything PDL has, Proxycurl has it with more features.
+              Everything PDL has, <span class="font-weight-bold text-gray-700">Proxycurl has it with more features.</span>
             </p>
 
           </div>
@@ -829,7 +830,7 @@
             </h1>
 
             <p class="text-gray-700 lead">
-              Proxycurl's data are no older 29 days. With the right API parameters, Proxycurl offers a data freshness guarantee of 29 days. In fact, some data are fetched in real-time.
+              Proxycurl's data are no older <span class="font-weight-bold">29 days</span>. With the right API parameters, Proxycurl offers a data freshness guarantee of <span class="font-weight-bold">29 days</span>. In fact, some data are fetched in <span class="font-weight-bold text-gray-700">real-time</span>.
             </p>
 
             <img class="img img-fluid rounded" alt="wle" src="assets/img/illustrations/PDL alternative_Third fold.png">
@@ -1172,7 +1173,7 @@ country=MX</code></pre>
 
             <!-- Heading -->
             <h1 class="font-weight-bold display-2">
-              <span class="text-success">95.7% cheaper</span> than PDL <i class="neu-warning-circle"></i>
+              <span class="text-success">95.7% cheaper</span> <i class="neu-warning-circle"></i>
             </h1>
 
             <p class="text-gray-700 lead mb-8">
