update pricing section

--- a/solution-PeopleDataLabs.html
+++ b/solution-PeopleDataLabs.html
@@ -968,7 +968,7 @@ country=MX</code></pre>
 
             <!-- Text -->
             <p class="lead text-white-80 mb-6 mb-md-8">
-              You do not have to commit to a subscription on Proxycurl like you are forced to on PDL. Proxycurl offers pay as you go options for which credits to not expire.
+              No need to commit to a subscription on Proxycurl like you are forced to on People Data Labs. Proxycurl offers pay as you go options where credits don't expire.
             </p>
 
           </div>
