--- a/solution-PeopleDataLabs.html
+++ b/solution-PeopleDataLabs.html
@@ -315,7 +315,7 @@
             </h1>
 
             <p class="text-gray-700 lead">
-              Proxycurl is a robust alternative to PDL that is 95.7% cheaper, with fresher data, much is much easier to use.
+              Proxycurl is a robust alternative to People Data Labs that is 95.7% cheaper, with fresher data, much is much easier to use.
             </p>
 
             <p class="text-success font-weight-bold">
