--- a/solution-PeopleDataLabs.html
+++ b/solution-PeopleDataLabs.html
@@ -315,7 +315,7 @@
             </h1>
 
             <p class="text-gray-700 lead">
-              Proxycurl is a robust alternative to People Data Labs that is 95.7% cheaper, with fresher data, much is much easier to use.
+              Proxycurl is a robust alternative to People Data Labs that is 95.7% cheaper, with fresher data, that is much easier to use.
             </p>
 
             <p class="text-success font-weight-bold">
@@ -350,12 +350,12 @@
 
             <!-- Heading -->
             <h1 class="font-weight-bold">
-              Equivalent features on <span class="text-primary">Proxycurl</span>
+              Equivalent People Data Labs features on <span class="text-primary">Proxycurl</span>
             </h1>
 
             <!-- Text -->
             <p class="lead text-muted mb-6 mb-lg-8">
-              Everything has, <span class="font-weight-bold text-gray-700">Proxycurl has it with more features.</span>
+              Everything People Data Labs has, <span class="font-weight-bold text-gray-700">Proxycurl has it with more features.</span>
             </p>
 
           </div>
