--- a/solution-PeopleDataLabs.html
+++ b/solution-PeopleDataLabs.html
@@ -41,7 +41,7 @@
 
           <div class="modal-body">
 
-            <img class="img img-fluid mb-6" alt="..." src="icon placement.png">
+            <img class="img img-fluid mb-6" alt="..." src="assets/img/illustrations/gift-illustration.svg">
 
             <h2 class="font-weight-bold h3">
               Are you an existing paying customer? We will give you a 1 free month for a matching Proxycurl's plan
