--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@
                   <div class="carousel-inner">
     
                     <div class="carousel-item active">
-                      <img class="d-block w-100" src="Illustration_landscape_placement.png" alt="Identifying talent with specific skillsets illustration">
+                      <img class="d-block w-100" src="assets/img/illustrations/Identifying talent with specific skillsets.png" alt="Identifying talent with specific skillsets illustration">
                     </div>
     
                     <div class="carousel-item">
