--- a/search-api.html
+++ b/search-api.html
@@ -392,7 +392,7 @@
           <div class="col-12 col-md-8 col-lg-10">
 
             <h2 class="display-4 font-weight-bold mb-2 text-center">
-              Find the right people from a <span class="text-primary">database of 462M people</span>
+              Find the right people from a <span class="text-primary">database of 18+M companies</span>
             </h2>
 
             <p class="text-muted lead text-center mb-8">
